@@ -254,13 +254,15 @@ NEW FEATURES
 	results are more likely to be correct to representation error.
 
     o	set.seed(kind=NULL) now takes 'kind' from a saved seed if the
-	workspace has been restored or .Random.seed has been set in 
+	workspace has been restored or .Random.seed has been set in
 	some other way.  Previously it took the 'currently used' value,
 	which was "default" unless random numbers had been used in
 	the current session.  Similarly for the values reported by
-	RNGkind().  (Related to PR#12567.) 
+	RNGkind().  (Related to PR#12567.)
 
 	set.seed() gains a 'normal.kind' argument.
+
+    o	is.unsorted() gains an argument 'strictly'.
 
 
 INSTALLATION
@@ -391,6 +393,9 @@ BUG FIXES
 	fit with  na.action = na.exclude.
 
     o	median(c(x = NA_real_)) no longer has spurious names().
+
+    o	isoreg(x,y) now returns the correct result also when x has ties,
+	in all cases.
 
 
 
